5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1577_1330.log
== TEST (2019-03-26 18:23:22) 
-- CODE:
a=6
b=250
c=b/a
print(c)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:24:10) 
-- CODE:
a=6
b=250
c=b/a
round(c,n)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(c,n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:24:19) 
-- CODE:
a=6
b=250
c=b/a
round(c,2)
print(c)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:25:04) 
-- CODE:
a=6
b=250
c=b/a
print(round(c,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:25:06) 
-- CODE:
a=6
b=250
c=b/a
print(round(c,2))
-- EXECUTION TIME:
0.15472
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
